force-app/main/default/objects/Callout_Properties__mdt/Callout_Properties__mdt.object-meta.xml
<CustomObject>
    <label>Callout Properties</label>
    <pluralLabel>Callouts Properties</pluralLabel>
</CustomObject>