force-app/main/default/objects/Callout_Properties__mdt/fields/Callout__c.field-meta.xml
<CustomField>
    <fullName>Callout__c</fullName>
    <description>The master-detail relationship to Callout (Callout__mtd) object.</description>
    <label>Callout</label>
    <referenceTo>Callout__mdt</referenceTo>
    <relationshipLabel>Callouts Properties</relationshipLabel>
    <relationshipName>Callouts_Properties</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>