force-app/main/default/objects/Callout_Properties__mdt/fields/Custom_Property__c.field-meta.xml
<CustomField>
    <fullName>Custom_Property__c</fullName>
    <description>The class name which implements CalloutInterfaces.CustomPropertyValue interface, to get the custom property value for the header or body.</description>
    <label>Custom Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>