force-app/main/default/objects/Callout_Properties__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>This value should contain the header name if the type is the header.</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>