force-app/main/default/objects/Callout_Properties__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
                <default>true</default>
                <label>Header</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>