force-app/main/default/objects/Callout_Properties__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value should contain a static value if the type is the header, if the type value is the body, this value should be the callout name configured in JSON Generator(JSON_Generator__mdt) object records.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>